Tiny fixing on the Templates.

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -6,9 +6,10 @@
 <body>
     <center>
         <h1>Static Files Django Tutorial</h1>
+        Salom
         {% block body_block %}
             <h1>Welcome to the Home-Page</h1>
-            <h2> search for others/ </h2>
+            <h2> search for other/ </h2>
             <h2> we are in the block of home page</h2>
         {% endblock %}
     </center>
