--- a/home/templates/others.html
+++ b/home/templates/others.html
@@ -1,5 +1,13 @@
+<!DOCTYPE html>
 {% extends "base.html" %}
-{% block body_block %}
-   <h2> search for / </h2>
-   <h1>{{ context.k1 }}</h1>
-{% endblock %}
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>HelpPage</title>
+</head>
+<body>
+    {% block body_block %}
+        <h2> search for / </h2>
+    {% endblock %}
+</body>
+</html>
