Tiny fixing on template, runsever and navigate to about/

--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -11,7 +11,7 @@
         <img src="{% static 'image/ninja.jpeg' %}">
         <h1>This is about the developers of this webpage</h1>
         <h2>Django is the best framework</h2>
-        <h1>DataFlair Team</h1>
+        <h1>Wax30d</h1>
         <h2>Year : {{ time | date:'Y' }}</h2>
         <h2>Month : {{ time | date:'M' }}</h2>
     {% endblock %}
