--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>HomePage</title>
+  <title>HomePage</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-    <center>
+  <center>
+      <nav class="navbar navbar-default navbar-static-top">
+          <div class="container">
+            <ul class="nav navbar-nav">
+              <li><a class="navbar-brand" href="{% url 'homepage' %}">HomePage</a></li>
+              <li><a class="navbar-link" href="{% url 'admin:index' %}">Admin</a></li>
+              <li><a class="navbar-link" href="{% url 'otherPage' %}">Other</a></li>
+              <li><a class="navbar-link" href="{% url 'about' %}">About</a></li>
+            </ul>
+          </div>
+      </nav>
+      <div class="container">
         <h1>Static Files Django Tutorial</h1>
-        Salom
         {% block body_block %}
             <h1>Welcome to the Home-Page</h1>
             <h2> search for other/ </h2>
-            <h2> we are in the block of home page</h2>
+            <h2>we are in the block of home page</h2>
         {% endblock %}
-    </center>
+      </div>
+  </center>
 </body>
 </html>
