Tiny fixing, corrected views function and its template.

--- a/home/templates/others.html
+++ b/home/templates/others.html
@@ -9,6 +9,7 @@
 
     {% block body_block %}
         <h2> search for / </h2>
+        <h1>{{ context.k1 }}</h1>
     {% endblock %}
 </body>
 </html>
